add publish flag to creating pages method and to frontmatter posts

--- a/content/portfolio/github-battle/index.mdx
+++ b/content/portfolio/github-battle/index.mdx
@@ -1,9 +1,10 @@
 ---
-type: 'portfolio'
-title: 'Github Battle'
+type: "portfolio"
+title: "Github Battle"
 date: 14/10/2018
-path: '/portfolio/github-battle/'
-images: 'images/thumbnails/portfolio/github-battle.jpg'
+path: "/portfolio/github-battle/"
+images: "images/thumbnails/portfolio/github-battle.jpg"
+publish: false
 ---
 
 ![github-battle](./github-battle.jpg)
@@ -14,8 +15,17 @@ images: 'images/thumbnails/portfolio/github-battle.jpg'
 ## What I did
 
 <div class="description">
-<li> Develop a react based application that pull data from github api to display the popular repositories in multiple languages </li>
-<li> Develop a battle game feature that need two github usernames to be entered in order to get a winner</li> </div>
+  <li>
+    {" "}
+    Develop a react based application that pull data from github api to display the
+    popular repositories in multiple languages{" "}
+  </li>
+  <li>
+    {" "}
+    Develop a battle game feature that need two github usernames to be entered in
+    order to get a winner
+  </li>{" "}
+</div>
 
 ## Libraries / Tools
 
