--- a/content/portfolio/malikgabroun/index.mdx
+++ b/content/portfolio/malikgabroun/index.mdx
@@ -1,9 +1,10 @@
 ---
-type: 'portfolio'
-title: 'MalikGabroun.com'
+type: "portfolio"
+title: "MalikGabroun.com"
 date: 14/10/2018
-path: '/portfolio/malikgabroun/'
-images: 'images/thumbnails/portfolio/personal-website.jpg'
+path: "/portfolio/malikgabroun/"
+images: "images/thumbnails/portfolio/personal-website.jpg"
+publish: false
 ---
 
 ![malikgabroun.com](./personal-website.jpg)
@@ -14,8 +15,9 @@ images: 'images/thumbnails/portfolio/personal-website.jpg'
 ## What I did
 
 <div class="description">
-<li> Develop my website with ReactJS and Gatsby</li>
-<li> Pull data from markdown to render using GraphQL  </li></div>
+  <li> Develop my website with ReactJS and Gatsby</li>
+  <li> Pull data from markdown to render using GraphQL </li>
+</div>
 
 ## Libraries / Tools
 
