--- a/content/posts/14-04-19--graphql-alias/index.mdx
+++ b/content/posts/14-04-19--graphql-alias/index.mdx
@@ -1,25 +1,26 @@
 ---
-type: 'post'
-path: '/blog/gatsby-tip-on-running-multiple-graphql-queries/'
-date: '2019/04/15'
-title: 'Gatsby tip on running multiple queries (GraphQL aliases)'
-tags: ['graphql', 'javascript', 'gatsby']
-summary: 'A quick tip on how to run multiple queries in one component/page using graphql aliases'
-images: 'images/thumbnails/pairProgramming.jpeg'
-imageAuthorID: '@alvaroreyes'
-imageAuthor: 'Alvaro Reyes'
+type: "post"
+path: "/blog/gatsby-tip-on-running-multiple-graphql-queries/"
+date: "2019/04/15"
+title: "Gatsby tip on running multiple queries (GraphQL aliases)"
+tags: ["graphql", "javascript", "gatsby"]
+summary: "A quick tip on how to run multiple queries in one component/page using graphql aliases"
+images: "images/thumbnails/pairProgramming.jpeg"
+imageAuthorID: "@alvaroreyes"
+imageAuthor: "Alvaro Reyes"
 keywords:
   [
-    'gatsby',
-    'multiple queries',
-    'graphql multiple queries',
-    'multiple graphql queries',
+    "gatsby",
+    "multiple queries",
+    "graphql multiple queries",
+    "multiple graphql queries",
   ]
 redirects:
   [
-    '/gatsby-tip-on-running-multiple-graphql-queries/',
-    '/blog/gatsby-tip-on-running-multiple-graphql-queries/',
+    "/gatsby-tip-on-running-multiple-graphql-queries/",
+    "/blog/gatsby-tip-on-running-multiple-graphql-queries/",
   ]
+publish: true
 ---
 
 Say you want to fetch specific data in one page based on an argument or a condition which can't be run using one query as you can't query the same field with different condition or argument. One way of doing that by using [GraphQL aliases](https://graphql.org/learn/queries/#aliases) which you can use to rename the returned dataset to anything you want.
