--- a/content/posts/29-09-20--programmatic-redirects/index.mdx
+++ b/content/posts/29-09-20--programmatic-redirects/index.mdx
@@ -11,6 +11,7 @@ imageAuthorID: "@pinewatt"
 imageAuthor: "Pine Watt"
 keywords:
   ["gatsby redirects, programmatic redirects, gatsby programmatic redirects"]
+publish: true
 ---
 
 Say we wanted to migrate our posts’ route from one route to another in our site but we do not want to go through the troubles of updating it everywhere else where the URL has been shared. As we want to avoid the issues of 404 pages if the user has visited the old URL route or in case these old routes have been indexed in Google.
