--- a/content/posts/hello-world/index.mdx
+++ b/content/posts/hello-world/index.mdx
@@ -1,15 +1,16 @@
 ---
-type: 'post'
-path: '/blog/hello-world/'
-date: '2018/10/29'
-title: 'Hello World'
-tags: ['general']
+type: "post"
+path: "/blog/hello-world/"
+date: "2018/10/29"
+title: "Hello World"
+tags: ["general"]
 summary: "A description about my site, and what's coming in this website"
-images: 'images/thumbnails/helloWorld.jpeg'
-imageAuthorID: '@johnnyabroad'
-imageAuthor: 'Jean-Pierre Brungs'
-keywords: ['hello world, intro, description']
-redirects: ['/hello-world/', '/blog/hello-world/']
+images: "images/thumbnails/helloWorld.jpeg"
+imageAuthorID: "@johnnyabroad"
+imageAuthor: "Jean-Pierre Brungs"
+keywords: ["hello world, intro, description"]
+redirects: ["/hello-world/", "/blog/hello-world/"]
+publish: true
 ---
 
 Recently, I have decided to rebuild my website to use ReactJS as I got interested in it. As a result, this is the first release of my website and going to improve it and add more features as I go along in improving my knowledge of React.
