--- a/content/posts/18-02-20--intro-to-algolia-in-gatsby-part-i/index.mdx
+++ b/content/posts/18-02-20--intro-to-algolia-in-gatsby-part-i/index.mdx
@@ -17,6 +17,7 @@ redirects:
     "/intro-to-algolia-in-gatsby-part-i/",
     "/blog/intro-to-algolia-in-gatsby-part-i/",
   ]
+  publish: true
 ---
 
 In this post, we will be looking into how to add algolia search to your gatsby site. we will see how to configure Algolia in gatsby and add Algolia's built-in component..
