--- a/content/posts/27-01-20--syntax-highlighting/index.mdx
+++ b/content/posts/27-01-20--syntax-highlighting/index.mdx
@@ -14,6 +14,7 @@ redirects:
     '/syntax-highlighting-in-gatsby-mdx/',
     '/blog/syntax-highlighting-in-gatsby-mdx/',
   ]
+  publish: true
 ---
 
 In this post, we will be looking into how to enable syntax highlighting for Gatsby MDX files using [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer)
@@ -29,7 +30,7 @@ Then, we create the component which we will use in the `<MDXProvider/>` that is 
 ```javascript
 const component = {
   pre: (props) => {
-    const className = props.children.props.className || '';
+    const className = props.children.props.className || "";
     const matches = className.match(/language-(?<lang>.*)/);
     return (
       <Highlight
@@ -38,7 +39,7 @@ const component = {
         language={
           matches && matches.groups && matches.groups.lang
             ? matches.groups.lang
-            : ''
+            : ""
         }
       >
         {({ className, style, tokens, getLineProps, getTokenProps }) => (
@@ -82,14 +83,14 @@ const matches = className.match(/language-(?<lang>.*)/);
 To enable syntax highlighting in MDX files by adding the following snippet below in `gatsby-browser.js`
 
 ```javascript
-import React from 'react';
-import { MDXProvider } from '@mdx-js/react';
-import Highlight, { defaultProps } from 'prism-react-renderer';
+import React from "react";
+import { MDXProvider } from "@mdx-js/react";
+import Highlight, { defaultProps } from "prism-react-renderer";
 
 /* eslint-disable */
 const component = {
   pre: (props) => {
-    const className = props.children.props.className || '';
+    const className = props.children.props.className || "";
     const matches = className.match(/language-(?<lang>.*)/);
     return (
       <Highlight
@@ -98,7 +99,7 @@ const component = {
         language={
           matches && matches.groups && matches.groups.lang
             ? matches.groups.lang
-            : ''
+            : ""
         }
       >
         {({ className, style, tokens, getLineProps, getTokenProps }) => (
