update frontmatter indentation

--- a/content/posts/27-01-20--syntax-highlighting/index.mdx
+++ b/content/posts/27-01-20--syntax-highlighting/index.mdx
@@ -1,20 +1,20 @@
 ---
-type: 'post'
-path: '/blog/syntax-highlighting-in-gatsby-mdx/'
-date: '2020/01/27'
-title: 'Syntax Highlighting in Gatsby MDX'
-tags: ['javascript', 'gatsby']
-summary: 'this post shows how to use prism-react-renderer to enable syntax highlighting for Gatsby MDX files'
-images: 'images/thumbnails/text-highlight.jpeg'
-imageAuthorID: '@esteejanssens'
-imageAuthor: 'Estée Janssens'
-keywords: ['syntax highlighting, prism, MDX syntax highlight']
+type: "post"
+path: "/blog/syntax-highlighting-in-gatsby-mdx/"
+date: "2020/01/27"
+title: "Syntax Highlighting in Gatsby MDX"
+tags: ["javascript", "gatsby"]
+summary: "this post shows how to use prism-react-renderer to enable syntax highlighting for Gatsby MDX files"
+images: "images/thumbnails/text-highlight.jpeg"
+imageAuthorID: "@esteejanssens"
+imageAuthor: "Estée Janssens"
+keywords: ["syntax highlighting, prism, MDX syntax highlight"]
 redirects:
   [
-    '/syntax-highlighting-in-gatsby-mdx/',
-    '/blog/syntax-highlighting-in-gatsby-mdx/',
+    "/syntax-highlighting-in-gatsby-mdx/",
+    "/blog/syntax-highlighting-in-gatsby-mdx/",
   ]
-  publish: true
+publish: true
 ---
 
 In this post, we will be looking into how to enable syntax highlighting for Gatsby MDX files using [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer)
