--- a/content/posts/3-11-18--verifying-gatsby/index.mdx
+++ b/content/posts/3-11-18--verifying-gatsby/index.mdx
@@ -1,20 +1,20 @@
 ---
-type: 'post'
-path: '/blog/verifying-gatsby-in-search-console/'
-date: '2018/11/03'
-title: 'How to verify a gatsby site in search console'
-tags: ['javascript', 'gatsby']
-summary: 'In this post, I will be talking about verifying gatsby site in search console'
-images: 'images/thumbnails/checklist.jpeg'
-imageAuthorID: '@glenncarstenspeters'
-imageAuthor: 'Glenn Carstens-Peters'
-keywords: ['gatsby', 'google', 'search console']
+type: "post"
+path: "/blog/verifying-gatsby-in-search-console/"
+date: "2018/11/03"
+title: "How to verify a gatsby site in search console"
+tags: ["javascript", "gatsby"]
+summary: "In this post, I will be talking about verifying gatsby site in search console"
+images: "images/thumbnails/checklist.jpeg"
+imageAuthorID: "@glenncarstenspeters"
+imageAuthor: "Glenn Carstens-Peters"
+keywords: ["gatsby", "google", "search console"]
 redirects:
   [
-    '/verifying-gatsby-in-search-console/',
-    '/blog/verifying-gatsby-in-search-console/',
+    "/verifying-gatsby-in-search-console/",
+    "/blog/verifying-gatsby-in-search-console/",
   ]
-  publish: true
+publish: true
 ---
 
 In order to verify you gatsby site, first you would need to use one of the verification method that the search console suggests. Below you can see the options you can select for verifying the site.
