--- a/content/posts/1-01-2019--things-i-would-like-to-know-more/index.mdx
+++ b/content/posts/1-01-2019--things-i-would-like-to-know-more/index.mdx
@@ -1,18 +1,18 @@
 ---
-type: 'post'
-path: '/blog/things-i-want-to-know-more-about-by-end-of-2019/'
-date: '2019/01/01'
-title: 'Things I Would Like to know more about by end of 2019'
-tags: ['general']
-summary: 'Some of the programming topics I would like to know more about by the end of the year'
-images: 'images/thumbnails/code-file.jpg'
-keywords: ['personal goals', 'tech']
+type: "post"
+path: "/blog/things-i-want-to-know-more-about-by-end-of-2019/"
+date: "2019/01/01"
+title: "Things I Would Like to know more about by end of 2019"
+tags: ["general"]
+summary: "Some of the programming topics I would like to know more about by the end of the year"
+images: "images/thumbnails/code-file.jpg"
+keywords: ["personal goals", "tech"]
 redirects:
   [
-    '/things-i-want-to-know-more-about-by-end-of-2019/',
-    '/blog/things-i-want-to-know-more-about-by-end-of-2019/',
+    "/things-i-want-to-know-more-about-by-end-of-2019/",
+    "/blog/things-i-want-to-know-more-about-by-end-of-2019/",
   ]
-  publish: true
+publish: true
 ---
 
 This post was inspired by Dan Abramov's [post](https://overreacted.io/things-i-dont-know-as-of-2018/) that he wrote few days ago (I recommend checking the post and all of his other brilliantly written posts at [overreacted.io](https://overreacted.io) ) which talk about his knowledge gab and often the assumption people make about what he knows or that he should know them because he is a senior engineer at facebook.
