updating post, updating homepage and adding new block

--- a/content/posts/react-algolia-course/index.mdx
+++ b/content/posts/react-algolia-course/index.mdx
@@ -17,7 +17,7 @@ import Button from "@components/Button";
 
 In this course, you will learn how the Algolia API works by understanding its main components. The end goal is for you to be able to integrate Algolia into your application to deliver tailored, fast search experiences.
 
-In the first half, you will learn how to build a full search experience using Algolia's search API and by utilizing Algolia's InstantSearch library. In the second half, you will learn how to extend Algolia's widgets by building a custom search experience.
+In the first half, you will learn how to build a full search experience using Algolia's search API and by utilising Algolia's InstantSearch library. In the second half, you will learn how to extend Algolia's widgets by building a custom search experience.
 
 By the end of this course, you will have gained hands-on experience by building a fully functional search experience using Algolia.
 
