--- a/content/posts/2020-01-16--create-pages-with-MDX/index.mdx
+++ b/content/posts/2020-01-16--create-pages-with-MDX/index.mdx
@@ -194,4 +194,4 @@ Hello World
 
 **Following the post and you can find a starter repo [here](https://github.com/gabroun/gatsby-mdx-starter) that shows usage of MDX pages**
 
-if you found this post helpful, then you will love this one as it shows you [how to add syntax highlighting to MDX files](/blog/syntax-highlighting-in-gatsby-mdx/).
+If you found this post helpful, then you will love this one as it shows you [how to add syntax highlighting to MDX files](/blog/syntax-highlighting-in-gatsby-mdx/).
