--- a/content/posts/2018-12-26--create-pages/index.mdx
+++ b/content/posts/2018-12-26--create-pages/index.mdx
@@ -2,6 +2,7 @@
 type: "post"
 path: "/blog/gatsby-create-pages/"
 date: "2018/12/26"
+lastUpdated: "2020/04/24"
 title: "How to create pages dynamically in Gatsby"
 tags: ["javascript", "gatsby"]
 summary: "In this post, we will be looking into how to create pages using Gatsby API createPages"
@@ -12,8 +13,6 @@ keywords: ["gatsby", "createpage", "dynamic pages", "create pages"]
 redirects: ["/gatsby-create-pages/", "/blog/gatsby-create-pages/"]
 publish: true
 ---
-
-### Updated: 24th of April
 
 In this post, we will be looking into how you can create pages programmatically from data (markdown files) in Gatsby.
 
