--- a/content/book-notes/show-your-work/index.mdx
+++ b/content/book-notes/show-your-work/index.mdx
@@ -4,7 +4,7 @@ path: "/book-notes/show-your-work/"
 date: "2021/12/26"
 title: "Show Your Work! by Austin Kleon - Summary & Notes"
 tags: ["book"]
-summary: " In this course, you will learn how the Algolia API works by understanding its main components."
+summary: ""
 images: "images/books/Show-Your-Work.jpeg"
 author: "Austin Kleon"
 bookTitle: "Show Your Work!"
@@ -44,9 +44,9 @@ I discovered the book when I watched Ali Abdaal's [video](https://www.youtube.co
 
 The book changed my outlook on sharing my work online.
 
-- It made me more comfortable about sharing my work, my thoughts, and my interests online.
+- It made me more comfortable about sharing my work, my thoughts and my interests online.
 - It made me more comfortable about sharing my progress and the process to tackle issues rather than just the final product.
-- It made generally more comfortable about learning and teaching in the public.
+- It made me generally more comfortable about learning and teaching in the public.
 - It made me realise that I don't need to be an expert on the specific topic in order to share my work online.
 
 ## Summary
