--- a/content/book-notes/show-your-work/index.mdx
+++ b/content/book-notes/show-your-work/index.mdx
@@ -4,7 +4,7 @@ path: "/book-notes/show-your-work/"
 date: "2021/12/26"
 title: "Show Your Work! by Austin Kleon - Summary & Notes"
 tags: ["book"]
-summary: ""
+summary: "The book changed my outlook on sharing my work online."
 images: "images/books/Show-Your-Work.jpeg"
 author: "Austin Kleon"
 bookTitle: "Show Your Work!"
