add amazon logo for affiliate links

--- a/content/book-notes/show-your-work/index.mdx
+++ b/content/book-notes/show-your-work/index.mdx
@@ -26,7 +26,7 @@ publish: true
 
 ## Who Should Read it?
 
-If you have any interest in creativity (content creation of any sort) or business, then you should read this book as it will open your mind to new possibilities that you didn’t know existed.
+If you have any interest in creativity (content creation of any sort) or business, then you should read this [book](https://amzn.to/3FwBCyE "amazon") as it will open your mind to new possibilities that you didn’t know existed.
 
 ## How I Discovered it?
 
