shadow style fix and typo fixes

--- a/content/book-notes/show-your-work/index.mdx
+++ b/content/book-notes/show-your-work/index.mdx
@@ -67,7 +67,7 @@ We need to move away from the *lone genius* myth of creativity.
 
 > “Creativity is not a talent. It is a way of operating.” —John Cleese
 
-Brian Eno define **“scenius”** as ideas cthat ome from a collective of highly talented individuals such as artists, curators and other contributors. This group forms an “ecology” of talent.
+Brian Eno define **“scenius”** as ideas that come from a collective of highly talented individuals such as artists, curators and other contributors. This group forms an “ecology” of talent.
 
 _Be An Amateur_
 
@@ -121,7 +121,7 @@ The structure of a story is what holds it together. It dictates where the reader
 
 ## 6. Teach What you Know
 
-The minute you learn something, turn around and teach it to someone else. Sharing your knowledge is one of the most powerful things that you can do. That's why it's important to teach others what you've learned, which you can do by creating some tutorials and posting them online.Take people step-by-step through part of your process to generate interest in your work. As blogger Kathy Sierra says, “Make people better at something they want to be better at.”
+The minute you learn something, turn around and teach it to someone else. Sharing your knowledge is one of the most powerful things that you can do. That's why it's important to teach others what you've learned, which you can do by creating some tutorials and posting them online. Take people step-by-step through part of your process to generate interest in your work. As blogger Kathy Sierra says, “Make people better at something they want to be better at.”
 
 ## 7. Don't turn into human spam
 
