update course link

--- a/content/posts/2020-08-6--vue-meta-data/index.mdx
+++ b/content/posts/2020-08-6--vue-meta-data/index.mdx
@@ -4,7 +4,7 @@ path: "/blog/how-to-add-metadata-in-vue-using-vue-meta/"
 date: "2020/08/06"
 title: "How to Add MetaData in Vue Using Vue-Meta"
 tags: ["javascript", "vue"]
-summary: "In this post, we will be looking into how to add vue-meta to our project and use it to handle metadata inside the component"
+summary: "In this post, we will be looking into how to add vue-meta to our project and use it inside the component"
 images: "images/thumbnails/imacScreen.jpeg"
 imageAuthorID: "@kaleidico"
 imageAuthor: "Kaleidico"
