--- a/content/posts/react-algolia-course/index.mdx
+++ b/content/posts/react-algolia-course/index.mdx
@@ -21,7 +21,10 @@ In the first half, you will learn how to build a full search experience using Al
 
 By the end of this course, you will have gained hands-on experience by building a fully functional search experience using Algolia.
 
-<Button label={"Check it out"} link={"/courses/"} />
+<Button
+  label={"Check it out"}
+  link={"https://www.educative.io/courses/start-algolia-api?aff=VOzg"}
+/>
 
 ## List of Contents
 
