update post title

--- a/content/posts/2019-02-14--react-context/index.mdx
+++ b/content/posts/2019-02-14--react-context/index.mdx
@@ -3,7 +3,7 @@ type: "post"
 path: "/blog/react-context/"
 date: "2019/02/14"
 lastUpdated: "2021/12/14"
-title: "React Context"
+title: "React Context API: An Introduction"
 tags: ["javascript", "react"]
 summary: "In this post, we will be looking into React Context API"
 images: "images/thumbnails/containers.jpeg"
