--- a/content/posts/2020-12-1-cancel-async-promise/index.mdx
+++ b/content/posts/2020-12-1-cancel-async-promise/index.mdx
@@ -3,7 +3,7 @@ type: "post"
 path: "/blog/how-to-cancel-async-promise-with-abortcontroller/"
 date: "2020/12/01"
 lastUpdated: ""
-title: "How To Cancel An Async Promise with AbortController"
+title: "Cancelling an Async Promise with AbortController"
 tags: ["javascript"]
 summary: "Cancel fetch requests using AbortController"
 images: "images/thumbnails/laptopOpen.jpg"
