--- a/content/posts/2018-11-3--verifying-gatsby/index.mdx
+++ b/content/posts/2018-11-3--verifying-gatsby/index.mdx
@@ -2,7 +2,7 @@
 type: "post"
 path: "/blog/verifying-gatsby-in-search-console/"
 date: "2018/11/03"
-title: "How to verify a gatsby site in search console"
+title: "How to Verify a Gatsby Site in Google Search Console"
 tags: ["javascript", "gatsby"]
 summary: "In this post, I will be talking about verifying gatsby site in search console"
 images: "images/thumbnails/checklist.jpeg"
