--- a/content/posts/2020-08-6--vue-meta-data/index.mdx
+++ b/content/posts/2020-08-6--vue-meta-data/index.mdx
@@ -2,7 +2,7 @@
 type: "post"
 path: "/blog/how-to-add-metadata-in-vue-using-vue-meta/"
 date: "2020/08/06"
-title: "How to Add MetaData in Vue Using Vue-Meta"
+title: "Vue-Meta: Adding MetaData to Vue.js Components"
 tags: ["javascript", "vue"]
 summary: "In this post, we will be looking into how to add vue-meta to our project and use it inside the component"
 images: "images/thumbnails/imacScreen.jpeg"
